[gd_scene load_steps=3 format=3 uid="uid://sml4tlt7jbgk"]

[ext_resource type="Script" uid="uid://byolya6wxt8w6" path="res://UI/HUD/fragments_hud.gd" id="1_hud"]
[ext_resource type="Texture2D" uid="uid://bprtee1o807lx" path="res://Assets/hud/runa.png" id="2_h8d47"]

[node name="FragmentsHUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="FragmentPanel" type="Panel" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 260.0
offset_bottom = 90.0
scale = Vector2(1, 1.0625)

[node name="HBoxContainer" type="HBoxContainer" parent="FragmentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="FragmentLabel" type="Label" parent="FragmentPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Fragment: 0/3"
vertical_alignment = 1

[node name="CenterNotification" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterNotification"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LargeIcon" type="TextureRect" parent="CenterNotification/VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
expand_mode = 5
stretch_mode = 5

[node name="NotifLabel" type="Label" parent="CenterNotification/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 32
text = "Fragment Collected!"
horizontal_alignment = 1

[node name="Runa" type="Sprite2D" parent="."]
position = Vector2(207.00002, 78.00001)
scale = Vector2(0.14, 0.14)
texture = ExtResource("2_h8d47")
